# nz_tgbot

./: .env  .gitignore  app.py  loader.py  pyproject.toml  req.txt  requirements.txt
data/: config.py
handlers/errors/: error_handler.py
handlers/users/: __init__.py  help.py  news.py  scheduled.py  start.py  support.py
keyboards/default/: keyboards.py
middlewares/: throttling.py
src/: config.py  keyboards.py  states.py  texts.py
src/database/dao/: __init__.py  action.py  base.py  holder.py  mark.py  user.py
src/database/models/: __init__.py  action.py  mark.py  user.py
src/handlers/: __init__.py  show_diary.py  show_grades.py  start.py
src/middlewares/: __init__.py  database.py
src/models/: __init__.py  diary.py  nzua_api.py  performance_components.py  student_performance.py
src/services/: api_calls.py
src/services/db/: base.py  db_calls.py  models.py
src/utils/: log.py  sorting.py
states/: states.py
utils/: news_parser.py  notify_admins.py
utils/db_api/: db_commands.py  postgresql.py
utils/db_api/schemas/: user.py
utils/misc/: logging.py
