[tool.poetry]
name = "NZ.UA Telegram Bot"
version = "0.1.0"
description = ""
authors = ["romesk <rma.skok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.24"
SQLAlchemy = "^1.4.46"
environs = "^9.5.0"
asyncpg = "^0.27.0"
aiocfscrape = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportPropertyTypeMismatch = false
reportGeneralTypeIssues = false
# reportOptionalMemberAccess = false
# # strictParameterNoneValue = false
# # reportPropertyTypeMismatch = false
# # reportOptionalCall = false
